// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`e2e tests should run 01-simple-readme as expected 1`] = `
"
Output

----- README.md ----- 

--- Snippet #1 ---
42


 PASS  1-README.md

  Files: 1
  Snippets succeded: 1
"
`;

exports[`e2e tests should run 02-use-globals as expected 1`] = `
"
Output

----- README.md ----- 

--- Snippet #1 ---
42


 PASS  1-README.md

  Files: 1
  Snippets succeded: 1
"
`;

exports[`e2e tests should run 03-multiple-files as expected 1`] = `
"
Output

----- DOCS.md ----- 

--- Snippet #1 ---
42


----- README.md ----- 

--- Snippet #1 ---
42


 PASS  1-DOCS.md
 PASS  1-README.md

  Files: 2
  Snippets succeded: 2
"
`;

exports[`e2e tests should run 04-multiple-snippets as expected 1`] = `
"
Output

----- README.md ----- 

--- Snippet #1 ---
42


--- Snippet #2 ---
42


 PASS  1-README.md
 PASS  2-README.md

  Files: 1
  Snippets succeded: 2
"
`;

exports[`e2e tests should run 05-simple-fail as expected 1`] = `
"
Output

----- README.md ----- 


Errors

----- README.md ----- 

--- Snippet #1 ---
ReferenceError: answer is not defined
    at Object.<anonymous> (<PROJECT_ROOT>/e2e/fixtures/05-simple-fail/README.md:6:13)
    at Module._compile (module.js:624:30)
    at Object.Module._extensions..js (module.js:635:10)
    at Module.load (module.js:545:32)
    at tryModuleLoad (module.js:508:12)
    at Function.Module._load (module.js:500:3)
    at Function.Module.runMain (module.js:665:10)
    at startup (bootstrap_node.js:187:16)
    at bootstrap_node.js:607:3


--- Snippet #2 ---
ReferenceError: answer is not defined
    at Object.<anonymous> (<PROJECT_ROOT>/e2e/fixtures/05-simple-fail/README.md:10:22)
    at Module._compile (module.js:624:30)
    at Object.Module._extensions..js (module.js:635:10)
    at Module.load (module.js:545:32)
    at tryModuleLoad (module.js:508:12)
    at Function.Module._load (module.js:500:3)
    at Function.Module.runMain (module.js:665:10)
    at startup (bootstrap_node.js:187:16)
    at bootstrap_node.js:607:3


 FAIL  1-README.md
 FAIL  2-README.md

  Files: 1
  Snippets rejected: 2
"
`;

exports[`e2e tests should run 06-with-dependencies as expected 1`] = `
"
Output

----- README.md ----- 

--- Snippet #1 ---
I'm here for the side effects


--- Snippet #2 ---
I'm here for the side effects
8080


 PASS  1-README.md
 PASS  2-README.md

  Files: 1
  Snippets succeded: 2
"
`;

exports[`e2e tests should run 07-with-imports as expected 1`] = `
"
Output

----- README.md ----- 

 PASS  1-README.md

  Files: 1
  Snippets succeded: 1
"
`;

exports[`e2e tests should run 08-with-aliases as expected 1`] = `
"
Output

----- README.md ----- 

 PASS  1-README.md

  Files: 1
  Snippets succeded: 1
"
`;
